--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "vite": "^5.0.0"
     },
     "dependencies": {
+        "froala-editor": "^4.2.0",
         "preline": "^2.1.0"
     }
 }
