--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
-        "mollie/laravel-mollie": "^3.0"
+        "mollie/laravel-mollie": "^3.0",
+        "stripe/stripe-php": "^14.3"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
